# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMake_BU.txt  README.md  main.cpp  renderer
assets/: imgui.ini  lightingBoxVertices  vertices  vertices.txt
assets/models/shantza/source/: Sketchfab_2017_12_16_18_24_38.blend
assets/models/wooden-barrel/source/Barrel/: barrel.fbx
assets/shaders/: basicFragment.glsl  defaultFragment.glsl  defaultPixelShader.glsl  defaultVertexShader.glsl
include/: Application.hh  BasicLighting.hh  Camera.hh  Common.hh  InputManager.hh  Logger.hh  Mesh.hh  Model.hh  Renderer.hh  Shader.hh  Texture.hh  Utils.hh  Vao.hh  Vbo.hh  Vib.hh  Window.hh  utils.hh
include/Core/: Application.hh  Common.hh  ImGuiLayer.hh  InputManager.hh  Layer.hh  LayerStack.cpp  LayerStack.hh  Logger.hh  ModelLoadLayer.hh  TimeManager.hh  Window.hh
include/OpenGL/: BasicLighting.hh  Camera.hh  ElementBuffer.hh  Mesh.hh  Model.hh  Renderer.hh  Shader.hh  Texture.hh  Vao.hh  Vbo.hh  VertexArray.hh  VertexBuffer.hh  Vib.hh
libs/kate/: Application.hh  application.hh  camera.hh  obj_parser.hh  renderer.hh  shader.hh  vertexArrayObject.hh  vertexBufferObject.hh  vertexIndexBuffer.hh  vertex_array_object.hh  vertex_buffer_object.hh  vertex_index_buffer.hh
setup/: linuxTools.sh
src/: Application.cpp  BasicLighting.cpp  Camera.cpp  Camera.hh  ImGuiLayer.cpp  InputManager.cpp  InputManager.hh  LayerStack.cpp  Logger.cpp  Mesh.cpp  Mesh.hh  Model.cpp  ModelLoadLayer.cpp  Renderer.cpp  Renderer.hh  Shader.cpp  Shader.hh  Texture.cpp  Texture.hh  Vao.cpp  Vao.hh  Vbo.cpp  Vbo.hh  VertexBuffer.cpp  VertexIndex.cpp  Vib.cpp  Vib.hh  Window.cpp  Window.hh  camera.hh  input.hh  main.cpp  mesh.hh  parser.hh  renderer.hh  shader.hh  texture.hh  utils.hh  vao.hh  vbo.hh  (+2 more)
test/: ModelLoading.cpp  SpecularLighting.cpp  TestImporter.cpp  WindowTest.cpp  test_window.cpp
